# otogepad

./: .gitignore  Experiential.md  README-ja.md  README.md  aa.py  main.py  pyproject.toml
pages/: iidx.html  index.html  nostalgia.html
rtmidi/: _rtmidi.pyi
static/css/: iidx.css  nostalgia.css
static/js/: iidx.js  nostalgia.js
utils/: log.py
web/: app.py  iidx.py  nostalgia.py
